@@ -5,6 +5,10 @@ Summary of important user-visible changes for communications 1.1.2:
       istrellis
       poly2trellis
 
+ ** Fixed bug in `egolaydec' which gave an error when there were more
+    than the three allowed erroneous bits, rather than setting the
+    error flag.
+
 Summary of important user-visible changes for communications 1.1.1:
 -------------------------------------------------------------------
 
